minor compatibility fix