@@ -6,6 +6,7 @@ import java.sql.ResultSet;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
@@ -139,7 +140,7 @@ public class MySQLContext extends Context {
 	@Override
 	public ColumnModel.ColumnFormat getColumnFormat(ColumnModel.EntityColumn entityColumn) {
 		if(StringUtils.isNotBlank(entityColumn.getDesignedType())) {
-			if(List.of("TEXT", "MEDIUMTEXT", "LONGTEXT", "LONGBLOB").contains(entityColumn.getDesignedType().toUpperCase())) {
+			if(Arrays.asList("TEXT", "MEDIUMTEXT", "LONGTEXT", "LONGBLOB").contains(entityColumn.getDesignedType().toUpperCase())) {
 				return new ColumnModel.ColumnFormat(entityColumn.getDesignedType(), null, false);
 			}
 			return new ColumnModel.ColumnFormat(entityColumn.getDesignedType(), entityColumn.getDesignedLength(), entityColumn.getDesignedLength() == null);
